[build-system]
# Minimum requirements for the build system to execute
requires = ["setuptools>64"]
build-backend = "setuptools.build_meta"

[project]
name = "timml"
dynamic = ["version"]
description = "Steady multi-layer AEM Model"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Mark Bakker" }]
maintainers = [
    { name = "Mark Bakker", email = "markbak@gmail.com" },
    { name = "Davíd Brakenhoff", email = "d.brakenhoff@artesia-water.nl" },
]
requires-python = ">= 3.11"
dependencies = ["numpy", "scipy", "numba", "matplotlib", "pandas"]

keywords = ["hydrology", "groundwater", "model", "analytic element method"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
homepage = "https://github.com/mbakker7/timml"
repository = "https://github.com/mbakker7/timml"
documentation = "http://mbakker7.github.io/timml/docs/builddocs/html/index.html"

[project.optional-dependencies]
ci = ["pytest", "pytest-cov", "pytest-xdist", "nbval", "jupyter", "shapely", "ruff"]
docs = [
    "timml[ci]",
    "sphinx",
    "sphinx-design",
    "pydata-sphinx-theme",
    "numpydoc",
    "myst_nb",
    "sphinxcontrib-bibtex",
    "sphinx-autoapi",
]

[tool.setuptools]
packages = ["timml", "timml.besselaesnumba"]

[tool.setuptools.dynamic]
version = { attr = "timml.version.__version__" }

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See: https://docs.astral.sh/ruff/rules/
select = [
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PT",  # pytest-style
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "NPY", # numpy
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D401", # First line should be in imperative mood
    "B006", # Do not use mutable data structures as default arguments
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
